--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "lucide-react": "^0.511.0"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
